--- a/ScreenRotateForWin10/MainWindow.xaml
+++ b/ScreenRotateForWin10/MainWindow.xaml
@@ -12,7 +12,7 @@
             <StackPanel Orientation="Horizontal" Height="30" VerticalAlignment="Top" Margin="0,0,-0.4,0">
                 <Label Content="要旋转的屏幕：" FontSize="16" FontWeight="Bold"/>
                 <!--Content="Screen to Rotate"-->
-                <ComboBox x:Name="choiceComboBox" SelectedIndex="0" Width="100" FontSize="16" ItemsSource="{Binding ScreenNums}"/>
+                <ComboBox x:Name="choiceComboBox" Width="100" FontSize="16" ItemsSource="{Binding ScreenNums}"/>
             </StackPanel>
             <UniformGrid Rows="3" Columns="3" Margin="0,35,0,0" Height="220">
                 <Label/>
